--- a/style.css
+++ b/style.css
@@ -162,6 +162,92 @@
   }
 }
 
+/* modal */
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 21.875rem;
+  height: 31.25rem;
+  border-radius: 4px;
+  background: var(--lotto-greyscale-1);
+  padding: 1rem 1rem 2rem;
+}
+
+.modal-header {
+  margin-bottom: 2rem;
+}
+
+.modal-close-box {
+  text-align: right;
+}
+
+.modal-title {
+  color: var(--lotto-greyscale-5);
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: 0.00938rem;
+}
+
+.lotto-result-list > li {
+  padding: 0.65rem 0;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+
+  &:last-child {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  }
+}
+
+.lotto-result-list > li > span {
+  width: 33.3%;
+  text-align: center;
+}
+
+.lotto-result-item-header {
+  color: var(--lotto-greyscale-5);
+  text-align: center;
+  font-size: 0.9375rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  letter-spacing: 0.03125rem;
+}
+
+.lotto-result-revenue-text {
+  color: var(--lotto-greyscale-5);
+  text-align: center;
+  font-size: 0.9375rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: 0.03125rem;
+  margin: 2rem 0;
+}
+
+.lotto-restart-button {
+  color: var(--lotto-greyscale-1);
+  font-size: 0.875rem;
+  font-weight: 700;
+  line-height: 1rem;
+  letter-spacing: 0.07813rem;
+  border-radius: 4px;
+  background: var(--lotto-primary);
+  width: 100%;
+  height: 2.75rem;
+}
+
 /* footer */
 .footer {
   height: 5rem;
