--- a/assets/index-BFHRPZXF.css
+++ b/assets/index-BFHRPZXF.css
@@ -209,6 +209,10 @@ input {
   gap: 0.5rem;
 }
 
+.lotto-ticket-icon {
+  font-size: 1.5rem;
+}
+
 /* lotto game form(winning number, bonus number) */
 .lotto-game-input-container {
   display: flex;
